<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeter"
        android:layout_width="161dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="24dp"
        android:text="@string/pregunta"
        app:layout_constraintBottom_toTopOf="@+id/TipsGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/TipsGroup"
        android:layout_width="269dp"
        android:layout_height="137dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nice" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goodish" />
    </RadioGroup>

    <EditText
        android:id="@+id/costOfService"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/tip"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/greeter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/RoundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/redon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TipsGroup" />

    <Button
        android:id="@+id/Calculate"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttontext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RoundSwitch" />

    <TextView
        android:id="@+id/messenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>